@@ -5,9 +5,9 @@ core = 6.x
 package = "Panels"
 dependencies[] = ctools
 
-; Information added by drupal.org packaging script on 2010-10-29
-version = "6.x-3.8"
+; Information added by drupal.org packaging script on 2011-01-12
+version = "6.x-3.9"
 core = "6.x"
 project = "panels"
-datestamp = "1288393847"
+datestamp = "1294876603"
 
